# Adachi

./: .gitignore  README.md  pyproject.toml
src/adachi/: __init__.py  adachi_main.py  key_builder.py
