[tool.poetry]
name = "adachi"
version = "0.1.0"
description = "A fast and simple caching lib for Discord bots"
authors = ["No767 <73260931+No767@users.noreply.github.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/No767/Adachi"
repository = "https://github.com/No767/Adachi"
documentation = "https://github.com/No767/Adachi"
classifiers = [
  "Framework :: AsyncIO",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Development Status :: 1 - Planning",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Intended Audience :: Developers",
  "Typing :: Typed"
]
include = ["LICENSE"]
packages = [{ include = "adachi", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
redis = {extras = ["hiredis"], version = "^4.3.4"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
